# dining-hall-dashboard

./: .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  README.md  SECURITY.md
data/: admin_users.json  menu_items.json  menu_presets.json  menu_schedules.json
src/: auth.rs  error_handler.rs  handlers.rs  main.rs  scheduler.rs  storage.rs
static/css/: style.css
templates/: 404.html  base.html  item_detail.html  menu.html
templates/admin/: dashboard.html  login.html  presets.html  schedules.html
templates/partials/: footer.html  header.html
