[package]
name = "dining-hall-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
thiserror = "1.0.58"
chrono = { version = "0.4.31", features = ["serde"] }
actix-web = "4.11.0"
actix-rt = "2.9.0"
actix-files = "0.6.6"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
env_logger = "0.10.1"
tera = "1.20.0"
argon2 = "0.5.3"
rand = "0.8.5"
actix-cors = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
