[package]
name = "dining-hall-dashboard"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = "2.0.16"
chrono = { version ="0.4.42", features = ["serde"] }
actix-web = "4.11.0"
actix-rt = "2.11.0"
actix-files = "0.6.8"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
env_logger = "0.11.8"
tera = "1.20.0"
argon2 = "0.5.3"
rand = "0.9.2"
actix-cors = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
